--- a/Check_point_1_streamlit.ipynb
+++ b/Check_point_1_streamlit.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM7rWJq/Wj+ve6v6Flyh9Qy",
+      "authorship_tag": "ABX9TyN2sr/+ot8VippvFpmAKpaB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1400,7 +1400,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "IHC3wEH1ehEK"
       },
@@ -1430,7 +1430,7 @@
         "id": "1NGYG6gdft3j",
         "outputId": "495e3a20-7704-4c57-cc15-e7b7204fe1ce"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1853,7 +1853,7 @@
         "id": "6iiWOVOEgTtV",
         "outputId": "424e5794-616d-4d03-818d-afa8015038e3"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1901,7 +1901,7 @@
         "id": "fu8KV1gaUlzk",
         "outputId": "c60ac7b3-7292-4d4b-d413-f0cdf5066f34"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1928,7 +1928,7 @@
         "id": "WXU11cPiUqjv",
         "outputId": "da503c50-0a8e-402d-ec72-fe1d649e9a28"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2478,7 +2478,7 @@
         "id": "5eFLwgCNhjqu",
         "outputId": "b54bb1a1-3041-4379-89e0-59f66368ea38"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2629,7 +2629,7 @@
         "id": "m-Y5l02ciw4e",
         "outputId": "c3c7e3ac-fa68-442b-f3f9-15aaaecbbbd9"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2790,7 +2790,7 @@
         "id": "cQJrUK4djIdj",
         "outputId": "14f792ba-73b5-4b7e-f298-5e0815185da8"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2900,7 +2900,9 @@
         "data[\"TENURE\"].fillna(data[\"TENURE\"].mode()[0], inplace=True)\n",
         "data[\"MRG\"].fillna(data[\"MRG\"].mode()[0], inplace=True)\n",
         "data[\"TOP_PACK\"].fillna(data[\"TOP_PACK\"].mode()[0], inplace=True)\n",
-        "data[\"CHURN\"].fillna(data[\"CHURN\"].mode()[0], inplace=True)"
+        "data[\"CHURN\"].fillna(data[\"CHURN\"].mode()[0], inplace=True)\n",
+        "data[\"ZONE1\"].fillna(data[\"ZONE1\"].mode()[0], inplace=True)\n",
+        "data[\"ZONE2\"].fillna(data[\"ZONE2\"].mode()[0], inplace=True)"
       ],
       "metadata": {
         "colab": {
@@ -2909,7 +2911,7 @@
         "id": "Z0Iytu_XqF-r",
         "outputId": "fc07f46f-d503-4ca6-b468-a0297645d3d2"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2974,7 +2976,7 @@
         "id": "UaBg9HmROthw",
         "outputId": "ce4ea000-54a7-44b4-d325-356d721aaa09"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3127,7 +3129,7 @@
       "metadata": {
         "id": "HknelsEhqxrS"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3151,7 +3153,7 @@
         "id": "f9RceNBWTEJw",
         "outputId": "44bf130b-bc56-41c5-b1f1-4b203f253eed"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3219,7 +3221,7 @@
         "id": "lwxa-6PfX3AT",
         "outputId": "5b3e86f2-44de-4cb0-8865-d379aafb6228"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3287,7 +3289,7 @@
         "id": "u3iyozQEYUCe",
         "outputId": "74ecea7a-1b8b-4602-e6a5-63b2d4e57af9"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3355,7 +3357,7 @@
         "id": "z91tFYIoY9i7",
         "outputId": "e5649770-7352-4d11-fc8d-e5c2cd63ea4c"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3423,7 +3425,7 @@
         "id": "c8oRlRYjaEKK",
         "outputId": "1f875de4-b9e0-4b76-fe2f-927390eeb610"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3491,7 +3493,7 @@
         "id": "FmVatAoZaSQt",
         "outputId": "bfe4f7ad-fbf9-4bbb-8956-77bf6f831a38"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3572,7 +3574,7 @@
         "id": "KFOxxdDDanc8",
         "outputId": "79d50cdf-3d54-4a34-b5c6-e19223d1c294"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3653,7 +3655,7 @@
         "id": "ojjMXGNtazTT",
         "outputId": "cc9efb21-1c3d-4689-f344-39ec77219b39"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3721,7 +3723,7 @@
         "id": "6MFzc5VabH1D",
         "outputId": "9f9861f1-90d9-440f-cabd-f7e4644d610a"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3789,7 +3791,7 @@
         "id": "_qocHBuDbRFC",
         "outputId": "6ff28e9a-2fc2-4bb8-c356-f5c2ba6cf5f9"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4052,7 +4054,7 @@
         "id": "DcpbP1pLbom3",
         "outputId": "5df83c53-a2ee-47e4-a785-b154c445e7fe"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4260,7 +4262,7 @@
         "id": "35dm5v9fbrda",
         "outputId": "b0a60413-807a-4302-81d0-6b12801762b4"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4291,7 +4293,7 @@
         "id": "XOdxQLm4b_Ev",
         "outputId": "5961116c-fdfd-45bd-8e3a-37c8f3a624e0"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4363,7 +4365,7 @@
       "metadata": {
         "id": "4wYuPy-9c6UR"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4379,7 +4381,7 @@
         "id": "GfBIYYuldBBp",
         "outputId": "7030f754-1752-46da-8de2-9d6070de123c"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4408,7 +4410,7 @@
         "id": "M9CJem8udMRu",
         "outputId": "ea13180d-91e4-47df-e2e1-84b67f5ec008"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4433,7 +4435,7 @@
         "id": "EBIUCVatdjCg",
         "outputId": "41b6cf11-7ce2-4d26-8e76-49fec1c3e82e"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4453,7 +4455,7 @@
       "metadata": {
         "id": "3XUQDICvdo_9"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4470,7 +4472,7 @@
         "id": "LVpsMMfgdu02",
         "outputId": "fe259bc4-7efd-4b6a-bfda-e8e97baf3935"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4902,7 +4904,7 @@
       "metadata": {
         "id": "nsYWth-lef0e"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4928,7 +4930,7 @@
         "id": "LFa2MFDJpm4y",
         "outputId": "b86e20d9-2e0f-4c84-c6a7-1a9fe239be99"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5004,7 +5006,7 @@
         "id": "niBcNboW4XK4",
         "outputId": "0d530ab1-f4c0-41c7-beec-1c96d54ad8e5"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5032,7 +5034,7 @@
         "id": "NJZTLbtj6-kK",
         "outputId": "6e115a74-b76f-4d26-bbbb-91556ff6e936"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
