--- a/Check_point_1_streamlit.ipynb
+++ b/Check_point_1_streamlit.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNnTMTr48E3fBlzz5MGHDJk",
+      "authorship_tag": "ABX9TyOy1snORXyOhoe2KRQp3qK0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3122,10 +3122,22 @@
         "# Encoder toutes les colonnes catégorielles\n",
         "for colonne in colonnes_categorielles:\n",
         "  data [colonne] = encoder.fit_transform(data[colonne])\n",
-        "  #one hot : region,(user drop)\n"
+        "  #one hot : region\n",
+        "data_encoded = pd.get_dummies(data, columns=['REGION'], prefix='job_type')\n"
       ],
       "metadata": {
         "id": "HknelsEhqxrS"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data_encoded= data_encoded.drop(columns=['REGION', 'user_id'])\n"
+      ],
+      "metadata": {
+        "id": "QEwEvxbRaT0f"
       },
       "execution_count": null,
       "outputs": []
